--- a/be/Dockerfile
+++ b/be/Dockerfile
@@ -5,7 +5,7 @@ ENV PYTHONUNBUFFERED=1
 WORKDIR /code
 COPY requirements.txt /code/
 RUN apt update -y && apt upgrade -y
-RUN apt-get install build-essential python3-dev python-dev gcc -y
+RUN apt-get install build-essential python3 gcc -y
 RUN pip install -r requirements.txt
 COPY . /code/
 
